--- a/exercícios/ex26/mq004/index.html
+++ b/exercícios/ex26/mq004/index.html
@@ -12,11 +12,11 @@
 <body>
     <main>
         <h1>Testando Media Queries</h1>
-        <img id="phone" src="imagens/icon-phone.png" alt="Acessando via smartphone">
-        <img id="tablet" src="imagens/icon-tablet.png" alt="Acessando via tablet">
-        <img id="print" src="imagens/icon-print.png" alt="Versão para impressora">
-        <img id="pc" src="imagens/icon-pc.png" alt="Versão para desktop">
-        <img id="tv" src="imagens/icon-tv.png" alt="Acessando via tv">
+        <img id="phone" src="../imagens/icon-phone.png" alt="Acessando via smartphone">
+        <img id="tablet" src="../imagens/icon-tablet.png" alt="Acessando via tablet">
+        <img id="print" src="../imagens/icon-print.png" alt="Versão para impressora">
+        <img id="pc" src="../imagens/icon-pc.png" alt="Versão para desktop">
+        <img id="tv" src="../imagens/icon-tv.png" alt="Acessando via tv">
     </main>
 </body>
 </html>
