--- a/exercícios/ex26/mq005/index.html
+++ b/exercícios/ex26/mq005/index.html
@@ -10,8 +10,10 @@
 
     <link rel="stylesheet" href="estilos.css">
 
+    <link rel="stylesheet" href="media-query.css">
+
 </head>
-<body>
+<body onresize="mudouTamanho()">
     <header>
         <h1>Meu Site</h1>
         <i id="burguer" class="material-icons" onclick="clickMenu()">menu</i>
@@ -46,6 +48,15 @@
                     itens.style.display = 'block'
                 }
         }
+
+        function mudouTamanho() {
+            if (window.innerWidth >= 768) {
+                itens.style.display = 'block'
+            } else {
+            itens.style.display = 'none' 
+            }
+        }
+
     </script>
 
 </body>
